# wiki-langGraph

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
data/wiki/: Index.md
docs/: ARCHITECTURE.md
src/wiki_langgraph/: __init__.py  cli.py  config.py  deep_agent.py  frontmatter_graph.py  graph.py  linking.py  linking_llm.py  linking_qmd.py  lint.py  llm_author.py  logging_config.py  manifest.py  nodes.py  obsidian_prompt.py  state.py
src/wiki_langgraph/skills/obsidian-markdown/: SKILL.md
tests/: __init__.py  test_config_llm_compile.py  test_deep_agent.py  test_frontmatter_graph.py  test_graph.py  test_linking.py  test_linking_llm.py  test_linking_qmd.py  test_lint.py  test_llm_author.py  test_logging_config.py  test_manifest.py  test_obsidian_prompt.py
